# fossil

./: BENCHMARK.md  Cargo.toml  README.md  bench.sh  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
completions/: fossil.bash  fossil.fish  fossil.zsh
docs/: astro.config.mjs  package-lock.json  package.json  vercel.json
docs/public/examples/: image.ppm  wave.pcm
docs/src/components/: EntropyDemo.astro  Favicon.astro  InstallTabs.astro  PackDemo.astro  pack.worker.ts
docs/src/pages/: index.astro
docs/src/styles/: global.css
docs/src/wasm/: fossil_wasm.js  fossil_wasm_bg.wasm  package.json
examples/: .gitignore  README.md  c.fossil  cat-2.ppm  cat.fossil  cat.ppm  ls.fossil  z.fossil
man/: fossil.1
scripts/: bench.sh
share/: fossil.1  fossil.bash  fossil.fish  fossil.zsh
src/: main.rs
src/commands/: explain.rs  inspect.rs  list.rs  map.rs  mod.rs  mount.rs  pack.rs  take.rs  unpack.rs  update.rs  verify.rs
src/core/: biglz.rs  bits.rs  block.rs  bundle.rs  container.rs  crc.rs  dir.rs  entropy.rs  image.rs  lossy.rs  mod.rs  varint.rs
src/core/models/: bwt.rs  bwtm.rs  delta.rs  generator.rs  huffman.rs  lz.rs  lzh.rs  lzr.rs  mod.rs  mtf.rs  ppm.rs  range.rs  rle.rs  signal.rs  transpose.rs  word.rs
src/utils/: ansi.rs  clipboard.rs  color.rs  mod.rs  spinner.rs  ui.rs
tests/: biglz.rs  bits.rs  block.rs  bundle.rs  bwtm.rs  container.rs  crc.rs  dir.rs  entropy.rs  image.rs  lazy.rs  lossy.rs  lz.rs  lzr.rs  models.rs  mtf.rs  progress.rs  range.rs  signal.rs  window.rs
tests/models/: bwt.rs  bwtm.rs  delta.rs  generator.rs  huffman.rs  lzh.rs  lzr.rs  ppm.rs  rle.rs  signal.rs  transpose.rs  word.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
