[package]
name = "fossil"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace"] }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"
