[package]
name = "fossil"
version = "0.1.1"
edition = "2024"
description = "a compressor that shows its work"
repository = "https://github.com/punctuations/fossil"
license = "GPL-3.0-only"

[dependencies]
terminal_size = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace"] }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_Security",
] }
